tests/errors/21_logical_type_mismatch.f
      PROGRAM LOGIC_TYPE_MISMATCH
      INTEGER A
      LOGICAL B
      A = 1
      B = .TRUE.
      B = A .AND. B
      END
